--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,20 +1,24 @@
 <resources>
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <!-- Base application theme. -->
+    <!--<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar"> Material Design-->
+    <!--<style name="AppTheme" parent="android:Theme.Holo.Light.DarkActionBar"> Holo -->
+    <style name="AppTheme" parent="Theme.MaterialComponents.Light.DarkActionBar"> <!--Material Theming-->
+        <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
 
+        <!--<item name="android:actionBarStyle">@style/MyActionBar</item>-->
     </style>
 
     <style name="MyActionBar" parent="android:Widget.Holo.ActionBar">
-        <item name="background">@color/color_primary</item>
+        <item name="android:background">@color/colorPrimary</item>
 
-        <item name="android:titleTextStyle">@style/MyTitleTextStyle</item>
+        <item name="android:titleTextStyle">@style/MyTilteTextStyle</item>
     </style>
 
-    <style name="MyTitleTextStyle" parent="android:style/TextAppearance.Holo.Widget.ActionBar.Title">
+    <style name="MyTilteTextStyle" parent="android:style/TextAppearance.Holo.Widget.ActionBar.Title">
         <item name="android:textColor">@android:color/white</item>
     </style>
-
 </resources>
